--- a/Programa/Interfaz/3DParchis/Views/Home/NuevoJuego.cshtml
+++ b/Programa/Interfaz/3DParchis/Views/Home/NuevoJuego.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@{
+    Layout = "_Layout";
+}
+
 
 <style>
 
@@ -40,6 +44,11 @@
         text-align: center;
     }
 
+    .gris {
+        background-color: gray;
+        text-align: center;
+    }
+
     #vacio {
         background-color: black;
     }
@@ -48,23 +57,57 @@
         width: 200px;
         height: 200px;
     }
-
 </style>
-@*<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>*@
+<div class="text-center">
+    <h4 class="display-4"><b>Nuevo Juego</b></h4>
+    @*<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
+</div>
 
+<div class="container" id="datoCreacion">
+    <h4>Agregue todos los datos:</h4>
+    <div class="row">
+        <div class="col">
+            <label for="niknameInput" class="form-label">Nikname del creador</label>
+            <input type="text" class="form-control" placeholder="Nikname" aria-label="Nikname" id="niknameInput" name="niknameInput">
+        </div>
+        <div class="col">
+            <div class="form-group">
+                <label for="exampleFormControlSelect1">Cantidad de Jugadores</label>
+                <select class="form-control" id="cantidadJugadorJuegoInput">
+                    <option value="2">2</option>
+                    <option value="4">4</option>
+                </select>
+            </div>
+        </div>
+        <div class="col">
+            <button type="submit" class="btn btn-outline-primary" style="margin-top:31px" id="btnCrearJuego">
+                Crear <i class='bx bx-plus bx-burst-hover bx-border-circle'></i>
+            </button>
+        </div>
+    </div>
+</div>
 
+<div class="container" id="datoCreacion">
+    <h4>Datos del juego:</h4>
+    <div class="row">
+        <div class="col-md-2">
+            <button type="submit" class="btn btn-outline-primary" style="margin-top:31px">
+                Buscar <i class='bx bx-check bx-burst-hover bx-border-circle'></i>
+            </button>
+        </div>
+        <div class="col-4">
+            <label for="telefono1Input" class="form-label">Jugadores en la sala:</label>
+            <input type="number" value="0" class="form-control" id="cantJugadorServer" name="cantJugadorServer" disabled>
+        </div>
+    </div>
+</div>
 
-<h1>Tablero de parchis</h1>
-
-<table border="1px">
+<table border="1px" id="tableroPrincipal" hidden>
     <!-- 1 -->
     <tr>
         <td class="amarillo" colspan="7" rowspan="7"><img src="~/img/esquinaAmarilla.png" /></td>
         <td colspan="2">1</td>
-        <td colspan="2">68</td>
+        <td class="gris" colspan="2">68</td>
         <td colspan="2">67</td>
         <td class="verde" colspan="7" rowspan="7"><img src="~/img/esquinaVerde.png" /></td>
     </tr>
@@ -90,7 +133,7 @@
     <tr>
         <td class="amarillo" colspan="2">5</td>
         <td class="amarillo" colspan="2">-</td>
-        <td colspan="2">63</td>
+        <td colspan="2" class="gris">63</td>
     </tr>
     <!-- 6 -->
     <tr>
@@ -111,7 +154,7 @@
         <td rowspan="2">15</td>
         <td rowspan="2">14</td>
         <td rowspan="2">13</td>
-        <td rowspan="2">12</td>
+        <td rowspan="2" class="gris">12</td>
         <td rowspan="2">11</td>
         <td rowspan="2">10</td>
         <td id="vacio"></td>
@@ -131,12 +174,12 @@
     <!-- 9 -->
     <tr>
         <td>9</td>
-        <td colspan="4" rowspan="4"><img src="https://cloudfront-us-east-1.images.arcpublishing.com/gruponacion/SXGNIKBYH5GSBDLTGMOAQ4KYBE.jpg" /></td>
+        <td colspan="4" rowspan="4"><img src="~/img/centro.png" /></td>
         <td>59</td>
     </tr>
     <!-- 10 -->
     <tr>
-        <td rowspan="2">17</td>
+        <td class="gris" rowspan="2">17</td>
         <td class="azul" rowspan="2">|</td>
         <td class="azul" rowspan="2">|</td>
         <td class="azul" rowspan="2">|</td>
@@ -151,7 +194,7 @@
         <td class="verde" rowspan="2">|</td>
         <td class="verde" rowspan="2">|</td>
         <td class="verde" rowspan="2">|</td>
-        <td rowspan="2">51</td>
+        <td class="gris" rowspan="2">51</td>
     </tr>
     <!-- 11 -->
     <tr>
@@ -171,7 +214,7 @@
         <td>43</td>
         <td rowspan="2">44</td>
         <td rowspan="2">45</td>
-        <td rowspan="2">46</td>
+        <td rowspan="2" class="gris">46</td>
         <td rowspan="2">47</td>
         <td rowspan="2">48</td>
         <td rowspan="2">49</td>
@@ -202,7 +245,7 @@
     </tr>
     <!-- 16 -->
     <tr>
-        <td colspan="2">29</td>
+        <td colspan="2" class="gris">29</td>
         <td class="rojo" colspan="2">-</td>
         <td class="rojo" colspan="2">39</td>
     </tr>
@@ -227,8 +270,10 @@
     <!-- 20 -->
     <tr>
         <td colspan="2">33</td>
-        <td colspan="2">34</td>
+        <td class="gris" colspan="2">34</td>
         <td colspan="2">35</td>
     </tr>
 
 </table>
+
+<script src="~/js/nuevoJuego.js" asp-append-version="true"></script>
