--- a/Programa/Interfaz/3DParchis/Views/Home/UnirseJuego.cshtml
+++ b/Programa/Interfaz/3DParchis/Views/Home/UnirseJuego.cshtml
@@ -58,6 +58,16 @@
     @*<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
 </div>
 
+<div class="container" id="datoCreacion">
+    <h4>Agregue todos los datos:</h4>
+    <div class="row">
+        <div class="col">
+            <label for="niknameInput" class="form-label">Nikname</label>
+            <input type="text" class="form-control" placeholder="Nikname" aria-label="Nikname" id="niknameInput" name="niknameInput">
+        </div>
+    </div>
+</div>
+
 <table border="1px">
     <!-- 1 -->
     <tr>
