--- a/Programa/Interfaz/3DParchis/Views/Home/Juego.cshtml
+++ b/Programa/Interfaz/3DParchis/Views/Home/Juego.cshtml
@@ -44,6 +44,11 @@
         text-align: center;
     }
 
+    .gris {
+        background-color: gray;
+        text-align: center;
+    }
+
     #vacio {
         background-color: black;
     }
@@ -54,44 +59,26 @@
     }
 </style>
 <div class="text-center">
-    <h3 class="display-4"><b>Unirse a Juego</b></h3>
+    <h3 class="display-4"><b>Juego {Identificacion}</b></h3>
     @*<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
 </div>
 
 <div class="container" id="datoCreacion">
-    <h4>Agregue todos los datos:</h4>
+    <h4>Jugador:</h4>
     <div class="row">
         <div class="col">
-            <label for="niknameInput" class="form-label">Nikname</label>
-            <input type="text" class="form-control" placeholder="Nikname" aria-label="Nikname" id="niknameInput" name="niknameInput">
+            <p><b>Turno de: </b></p>
         </div>
     </div>
 
-    <h4>Juegos activos:</h4>
-    <button type="submit" class="btn btn-outline-success" id="buscarPartidas">
-        Buscar <i class='bx bx-check bx-burst-hover bx-border-circle'></i>
-    </button>
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th scope="col">ID Partida</th>
-                <th scope="col">Nickname del creador</th>
-                <th scope="col">Cant Jugadores</th>
-                <th scope="col">Jugadores en el juego</th>
-                <th scope="col">Seleccionar</th>
-            </tr>
-        </thead>
-        <tbody id="tbodyJuego">
-        </tbody>
-    </table>
 </div>
 
-<table border="1px" hidden>
+<table border="1px" id="tableroPrincipal" hidden>
     <!-- 1 -->
     <tr>
         <td class="amarillo" colspan="7" rowspan="7"><img src="~/img/esquinaAmarilla.png" /></td>
         <td colspan="2">1</td>
-        <td colspan="2">68</td>
+        <td class="gris" colspan="2">68</td>
         <td colspan="2">67</td>
         <td class="verde" colspan="7" rowspan="7"><img src="~/img/esquinaVerde.png" /></td>
     </tr>
@@ -117,7 +104,7 @@
     <tr>
         <td class="amarillo" colspan="2">5</td>
         <td class="amarillo" colspan="2">-</td>
-        <td colspan="2">63</td>
+        <td colspan="2" class="gris">63</td>
     </tr>
     <!-- 6 -->
     <tr>
@@ -138,7 +125,7 @@
         <td rowspan="2">15</td>
         <td rowspan="2">14</td>
         <td rowspan="2">13</td>
-        <td rowspan="2">12</td>
+        <td rowspan="2" class="gris">12</td>
         <td rowspan="2">11</td>
         <td rowspan="2">10</td>
         <td id="vacio"></td>
@@ -163,7 +150,7 @@
     </tr>
     <!-- 10 -->
     <tr>
-        <td rowspan="2">17</td>
+        <td class="gris" rowspan="2">17</td>
         <td class="azul" rowspan="2">|</td>
         <td class="azul" rowspan="2">|</td>
         <td class="azul" rowspan="2">|</td>
@@ -178,7 +165,7 @@
         <td class="verde" rowspan="2">|</td>
         <td class="verde" rowspan="2">|</td>
         <td class="verde" rowspan="2">|</td>
-        <td rowspan="2">51</td>
+        <td class="gris" rowspan="2">51</td>
     </tr>
     <!-- 11 -->
     <tr>
@@ -198,7 +185,7 @@
         <td>43</td>
         <td rowspan="2">44</td>
         <td rowspan="2">45</td>
-        <td rowspan="2">46</td>
+        <td rowspan="2" class="gris">46</td>
         <td rowspan="2">47</td>
         <td rowspan="2">48</td>
         <td rowspan="2">49</td>
@@ -229,7 +216,7 @@
     </tr>
     <!-- 16 -->
     <tr>
-        <td colspan="2">29</td>
+        <td colspan="2" class="gris">29</td>
         <td class="rojo" colspan="2">-</td>
         <td class="rojo" colspan="2">39</td>
     </tr>
@@ -254,9 +241,10 @@
     <!-- 20 -->
     <tr>
         <td colspan="2">33</td>
-        <td colspan="2">34</td>
+        <td class="gris" colspan="2">34</td>
         <td colspan="2">35</td>
     </tr>
 
 </table>
-<script src="~/js/unirseJuego.js" asp-append-version="true"></script>
+
+@*<script src="~/js/unirseJuego.js" asp-append-version="true"></script>*@
