--- a/Programa/Interfaz/3DParchis/Views/Home/Juego.cshtml
+++ b/Programa/Interfaz/3DParchis/Views/Home/Juego.cshtml
@@ -53,9 +53,44 @@
         background-color: black;
     }
 
-    img {
+/*    img {
         width: 200px;
         height: 200px;
+    }*/
+    .parent {
+        position: relative;
+        top: 0;
+        left: 0;
+    }
+
+    .image1 {
+        position: relative;
+        width: 200px;
+        height: 200px;
+        top: 0;
+        left: 0;
+    }
+
+    .ficha1 {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        top: 65px;
+        left: 20px;
+    }
+    .ficha2 {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        top: 65px;
+        left: 150px;
+    }
+    .ficha3 {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        top: 155px;
+        left: 80px;
     }
 </style>
 <div class="text-center">
@@ -73,14 +108,28 @@
 
 </div>
 
-<table border="1px" id="tableroPrincipal" hidden>
+<table border="1px" id="tableroPrincipal">
     <!-- 1 -->
     <tr>
-        <td class="amarillo" colspan="7" rowspan="7"><img src="~/img/esquinaAmarilla.png" /></td>
+        <td class="amarillo" colspan="7" rowspan="7">
+            <div class="parent">
+                <img class="image1" src="~/img/esquinaAmarilla.png" />
+                <img class="ficha1" src="~/img/fichaAmarilla.png" />
+                <img class="ficha2" src="~/img/fichaAmarilla.png" />
+                <img class="ficha3" src="~/img/fichaAmarilla.png" />
+            </div>
+        </td>
         <td colspan="2">1</td>
         <td class="gris" colspan="2">68</td>
         <td colspan="2">67</td>
-        <td class="verde" colspan="7" rowspan="7"><img src="~/img/esquinaVerde.png" /></td>
+        <td class="verde" colspan="7" rowspan="7">
+            <div class="parent">
+                <img class="image1" src="~/img/esquinaVerde.png" />
+                <img class="ficha1" src="~/img/fichaVerde.png" />
+                <img class="ficha2" src="~/img/fichaVerde.png" />
+                <img class="ficha3" src="~/img/fichaVerde.png" />
+            </div>
+        </td>
     </tr>
     <!-- 2 -->
     <tr>
@@ -202,11 +251,25 @@
     </tr>
     <!-- 14 -->
     <tr>
-        <td class="azul" colspan="7" rowspan="7"><img src="~/img/esquinaAzul.png" /></td>
+        <td class="azul" colspan="7" rowspan="7">
+            <div class="parent">
+                <img class="image1" src="~/img/esquinaAzul.png" />
+                <img class="ficha1" src="~/img/fichaAzul.png" />
+                <img class="ficha2" src="~/img/fichaAzul.png" />
+                <img class="ficha3" src="~/img/fichaAzul.png" />
+            </div>
+        </td>
         <td colspan="2">27</td>
         <td class="rojo" colspan="2">-</td>
         <td colspan="2">41</td>
-        <td class="rojo" colspan="7" rowspan="7"><img src="~/img/esquinaRoja.png" /></td>
+        <td class="rojo" colspan="7" rowspan="7">
+            <div class="parent">
+                <img class="image1" src="~/img/esquinaRoja.png" />
+                <img class="ficha1" src="~/img/fichaRoja.png" />
+                <img class="ficha2" src="~/img/fichaRoja.png" />
+                <img class="ficha3" src="~/img/fichaRoja.png" />
+            </div>
+        </td>
     </tr>
     <!-- 15 -->
     <tr>
