Se agrega el color de cada jugador

--- a/Programa/Interfaz/3DParchis/Views/Home/Juego.cshtml
+++ b/Programa/Interfaz/3DParchis/Views/Home/Juego.cshtml
@@ -114,6 +114,8 @@
             <p><b>Turno de: </b><b id="turnoDe"></b></p>
         </div>
     </div>
+    <label for="colorInput"><b>Color:</b></label>
+    <input type="color" id="colorInput" name="colorInput" value="#ffffff" disabled><br><br>
     <p><b>Resultado del dado: </b><b id="resDado"></b></p>
     <button type="submit" class="btn btn-outline-success" id="btnTirarDado" disabled>
         Tirar Dado <i class='bx bx-dice-6 bx-burst-hover bx-border-circle'></i>
