Se esconde las fichas seleccionadas

--- a/Programa/Interfaz/3DParchis/Views/Home/Juego.cshtml
+++ b/Programa/Interfaz/3DParchis/Views/Home/Juego.cshtml
@@ -128,9 +128,10 @@
         <td class="amarillo" colspan="7" rowspan="7">
             <div class="parent">
                 <img class="image1" src="~/img/esquinaAmarilla.png" />
-                <img class="ficha1" src="~/img/fichaAmarilla.png" id="jugador0Ficha,Amarilla,0"onclick="getFichaMovimiento(this.id)"/>
-                <img class="ficha2" src="~/img/fichaAmarilla.png" id="jugador0Ficha,Amarilla,1"onclick="getFichaMovimiento(this.id)"/>
-                <img class="ficha3" src="~/img/fichaAmarilla.png" id="jugador0Ficha,Amarilla,2"onclick="getFichaMovimiento(this.id)"/>
+                @*<img class="ficha1" src="~/img/fichaAmarilla.png" id="jugador0Ficha,Amarilla,0" onclick="getFichaMovimiento(this.id)"/>*@
+                <img class="ficha1" src="~/img/fichaAmarilla.png" id="jugador0FichaxAmarillax0" onclick="getFichaMovimiento(this.id)"/>
+                <img class="ficha2" src="~/img/fichaAmarilla.png" id="jugador0FichaxAmarillax1" onclick="getFichaMovimiento(this.id)"/>
+                <img class="ficha3" src="~/img/fichaAmarilla.png" id="jugador0FichaxAmarillax2" onclick="getFichaMovimiento(this.id)"/>
             </div>
         </td>
         <td colspan="2" id="1pos">1</td>
@@ -139,9 +140,9 @@
         <td class="verde" colspan="7" rowspan="7">
             <div class="parent">
                 <img class="image1" src="~/img/esquinaVerde.png" />
-                <img class="ficha1" src="~/img/fichaVerde.png" id="jugador1Ficha,Verde,0"onclick="getFichaMovimiento(this.id)"/>
-                <img class="ficha2" src="~/img/fichaVerde.png" id="jugador1Ficha,Verde,1"onclick="getFichaMovimiento(this.id)"/>
-                <img class="ficha3" src="~/img/fichaVerde.png" id="jugador1Ficha,Verde,2"onclick="getFichaMovimiento(this.id)"/>
+                <img class="ficha1" src="~/img/fichaVerde.png" id="jugador1FichaxVerdex0"onclick="getFichaMovimiento(this.id)"/>
+                <img class="ficha2" src="~/img/fichaVerde.png" id="jugador1FichaxVerdex1"onclick="getFichaMovimiento(this.id)"/>
+                <img class="ficha3" src="~/img/fichaVerde.png" id="jugador1FichaxVerdex2"onclick="getFichaMovimiento(this.id)"/>
             </div>
         </td>
     </tr>
@@ -268,9 +269,9 @@
         <td class="azul" colspan="7" rowspan="7">
             <div class="parent">
                 <img class="image1" src="~/img/esquinaAzul.png" />
-                <img class="ficha1" src="~/img/fichaAzul.png" id="jugador2Ficha,Azul,0"onclick="getFichaMovimiento(this.id)"/>
-                <img class="ficha2" src="~/img/fichaAzul.png" id="jugador2Ficha,Azul,1"onclick="getFichaMovimiento(this.id)"/>
-                <img class="ficha3" src="~/img/fichaAzul.png" id="jugador2Ficha,Azul,2"onclick="getFichaMovimiento(this.id)"/>
+                <img class="ficha1" src="~/img/fichaAzul.png" id="jugador2FichaxAzulx0"onclick="getFichaMovimiento(this.id)"/>
+                <img class="ficha2" src="~/img/fichaAzul.png" id="jugador2FichaxAzulx1"onclick="getFichaMovimiento(this.id)"/>
+                <img class="ficha3" src="~/img/fichaAzul.png" id="jugador2FichaxAzulx2"onclick="getFichaMovimiento(this.id)"/>
             </div>
         </td>
         <td colspan="2" id="27pos">27</td>
@@ -279,9 +280,9 @@
         <td class="rojo" colspan="7" rowspan="7">
             <div class="parent">
                 <img class="image1" src="~/img/esquinaRoja.png" />
-                <img class="ficha1" src="~/img/fichaRoja.png" id="jugador3Ficha,Roja,0" onclick="getFichaMovimiento(this.id)"/>
-                <img class="ficha2" src="~/img/fichaRoja.png" id="jugador3Ficha,Roja,1" onclick="getFichaMovimiento(this.id)"/>
-                <img class="ficha3" src="~/img/fichaRoja.png" id="jugador3Ficha,Roja,2" onclick="getFichaMovimiento(this.id)"/>
+                <img class="ficha1" src="~/img/fichaRoja.png" id="jugador3FichaxRojax0" onclick="getFichaMovimiento(this.id)"/>
+                <img class="ficha2" src="~/img/fichaRoja.png" id="jugador3FichaxRojax1" onclick="getFichaMovimiento(this.id)"/>
+                <img class="ficha3" src="~/img/fichaRoja.png" id="jugador3FichaxRojax2" onclick="getFichaMovimiento(this.id)"/>
             </div>
         </td>
     </tr>
