--- a/Programa/Interfaz/3DParchis/Views/Home/Juego.cshtml
+++ b/Programa/Interfaz/3DParchis/Views/Home/Juego.cshtml
@@ -119,6 +119,9 @@
     <p><b>Resultado del dado: </b><b id="resDado"></b></p>
     <button type="submit" class="btn btn-outline-success" id="btnTirarDado" disabled>
         Tirar Dado <i class='bx bx-dice-6 bx-burst-hover bx-border-circle'></i>
+    </button> 
+    <button type="submit" class="btn btn-outline-success" onclick="verEstadistica()">
+        Ver estadistica <i class='bx bx-list-ol bx-burst-hover bx-border-circle'></i>
     </button>
 </div>
 
@@ -149,37 +152,37 @@
     <!-- 2 -->
     <tr>
         <td colspan="2" id="2pos">2</td>
-        <td class="amarillo" colspan="2">-</td>
+        <td class="amarillo" colspan="2" id="amarillo0">-</td>
         <td colspan="2" id="66pos">66</td>
     </tr>
     <!-- 3 -->
     <tr>
         <td colspan="2" id="3pos">3</td>
-        <td class="amarillo" colspan="2">-</td>
+        <td class="amarillo" colspan="2"id="amarillo1">-</td>
         <td colspan="2" id="65pos">65</td>
     </tr>
     <!-- 4 -->
     <tr>
         <td colspan="2" id="4pos">4</td>
-        <td class="amarillo" colspan="2">-</td>
+        <td class="amarillo" colspan="2" id="amarillo2">-</td>
         <td colspan="2" id="64pos">64</td>
     </tr>
     <!-- 5 -->
     <tr>
         <td class="amarillo" colspan="2" id="5pos">5</td>
-        <td class="amarillo" colspan="2">-</td>
+        <td class="amarillo" colspan="2" id="amarillo3">-</td>
         <td colspan="2" class="gris" id="63pos">63</td>
     </tr>
     <!-- 6 -->
     <tr>
         <td colspan="2" id="6pos">6</td>
-        <td class="amarillo" colspan="2">-</td>
+        <td class="amarillo" colspan="2" id="amarillo4">-</td>
         <td colspan="2" id="62pos">62</td>
     </tr>
     <!-- 7 -->
     <tr>
         <td colspan="2" id="7pos">7</td>
-        <td class="amarillo" colspan="2">-</td>
+        <td class="amarillo" colspan="2" id="amarillo5">-</td>
         <td colspan="2" id="61pos">61</td>
     </tr>
     <!-- 8 -->
@@ -194,8 +197,8 @@
         <td rowspan="2" id="10pos">10</td>
         <td id="vacio"></td>
         <td id="8pos">8</td>
-        <td>-</td>
-        <td>-</td>
+        <td class="amarillo">-</td>
+        <td class="amarillo" id="amarillo6">-</td>
         <td id="60pos">60</td>
         <td id="vacio"></td>
         <td rowspan="2" id="58pos">58</td>
@@ -215,26 +218,26 @@
     <!-- 10 -->
     <tr>
         <td class="gris" rowspan="2" id="17pos">17</td>
-        <td class="azul" rowspan="2">|</td>
-        <td class="azul" rowspan="2">|</td>
-        <td class="azul" rowspan="2">|</td>
-        <td class="azul" rowspan="2">|</td>
-        <td class="azul" rowspan="2">|</td>
-        <td class="azul" rowspan="2">|</td>
-        <td>|</td>
-        <td>|</td>
-        <td class="verde" rowspan="2">|</td>
-        <td class="verde" rowspan="2">|</td>
-        <td class="verde" rowspan="2">|</td>
-        <td class="verde" rowspan="2">|</td>
-        <td class="verde" rowspan="2">|</td>
-        <td class="verde" rowspan="2">|</td>
+        <td class="azul" rowspan="2" id="azul0">|</td>
+        <td class="azul" rowspan="2" id="azul1">|</td>
+        <td class="azul" rowspan="2" id="azul2">|</td>
+        <td class="azul" rowspan="2" id="azul3">|</td>
+        <td class="azul" rowspan="2" id="azul4">|</td>
+        <td class="azul" rowspan="2" id="azul5">|</td>
+        <td class="azul" id="azul6">|</td>
+        <td class="verde" id="verde6">|</td>
+        <td class="verde" rowspan="2" id="verde5">|</td>
+        <td class="verde" rowspan="2" id="verde4">|</td>
+        <td class="verde" rowspan="2" id="verde3">|</td>
+        <td class="verde" rowspan="2" id="verde2">|</td>
+        <td class="verde" rowspan="2" id="verde1">|</td>
+        <td class="verde" rowspan="2" id="verde0">|</td>
         <td class="gris" rowspan="2" id="51pos">51</td>
     </tr>
     <!-- 11 -->
     <tr>
-        <td>|</td>
-        <td>|</td>
+        <td class="azul">|</td>
+        <td class="verde">|</td>
     </tr>
     <!-- 12 -->
     <tr>
@@ -259,8 +262,8 @@
     <tr>
         <td id="vacio"></td>
         <td id="26pos">26</td>
-        <td>-</td>
-        <td>-</td>
+        <td class="rojo" id="rojo6">-</td>
+        <td class="rojo">-</td>
         <td id="42pos">42</td>
         <td id="vacio"></td>
     </tr>
@@ -275,7 +278,7 @@
             </div>
         </td>
         <td colspan="2" id="27pos">27</td>
-        <td class="rojo" colspan="2">-</td>
+        <td class="rojo" colspan="2" id="rojo5">-</td>
         <td colspan="2" id="41pos">41</td>
         <td class="rojo" colspan="7" rowspan="7">
             <div class="parent">
@@ -289,40 +292,74 @@
     <!-- 15 -->
     <tr>
         <td colspan="2" id="28pos">28</td>
-        <td class="rojo" colspan="2">-</td>
+        <td class="rojo" colspan="2" id="rojo4">-</td>
         <td colspan="2" id="40pos">40</td>
     </tr>
     <!-- 16 -->
     <tr>
         <td colspan="2" class="gris" id="29pos">29</td>
-        <td class="rojo" colspan="2">-</td>
+        <td class="rojo" colspan="2" id="rojo3">-</td>
         <td class="rojo" colspan="2" id="39pos">39</td>
     </tr>
     <!-- 17 -->
     <tr>
         <td colspan="2" id="30pos">30</td>
-        <td class="rojo" colspan="2">-</td>
+        <td class="rojo" colspan="2" id="rojo2">-</td>
         <td colspan="2" id="38pos">38</td>
     </tr>
     <!-- 18 -->
     <tr>
         <td colspan="2" id="31pos">31</td>
-        <td class="rojo" colspan="2">-</td>
+        <td class="rojo" colspan="2" id="rojo1">-</td>
         <td colspan="2" id="37pos">37</td>
     </tr>
     <!-- 19 -->
     <tr>
         <td colspan="2" id="32pos">32</td>
-        <td class="rojo" colspan="2">-</td>
+        <td class="rojo" colspan="2" id="rojo0">-</td>
         <td colspan="2" id="36pos">36</td>
     </tr>
     <!-- 20 -->
     <tr>
         <td colspan="2" id="33pos">33</td>
         <td class="gris" colspan="2" id="34pos">34</td>
-        <td colspan="2" id="5pos">35</td>
+        <td colspan="2" id="35pos">35</td>
     </tr>
 
 </table>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+  <h4>Datos Estadísticos</h4>
+            </div>
+            <div class="modal-body">
+
+                <div class="row">
+                    <div class="col">
+                        <p>Id de partida: <b id="estadisticaIdPartida"></b></p>
+                    </div>
+                    <div class="col">
+                        <p>Creador: <b id="estadisticaCreador"></b></p>
+                    </div>
+                </div>
+
+                <table class="table dashboard-table border-primary table-hover" role="grid" >
+                    <thead class="table-primary">
+                        <tr>
+                            <th scope="col" style="font-size:13px">Nombre</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tbJudador">
+                    </tbody>
+                </table>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script src="~/js/juego.js" asp-append-version="true"></script>
