--- a/Programa/Interfaz/3DParchis/Views/Shared/_Layout.cshtml
+++ b/Programa/Interfaz/3DParchis/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UnirseJuego">Unirse a Juego</a>
                         </li>
+                        @*<li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="VerEstadistica">Ver Estadística</a>
+                        </li>*@                       
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="VerRanking">Ver Ranking</a>
                         </li>
